Projeto contendo API(crud), MVC e projeto de Teste(erro)

--- a/CursoAPI/CursoAPI.csproj
+++ b/CursoAPI/CursoAPI.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>62ddbd72-efe2-4ccc-92ef-06f5b9e3d0d6</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
