--- a/CursoMVC/appsettings.json
+++ b/CursoMVC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LAPTOP-NATHANAE\\SQLEXPRESS;Database=Cursomvc;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
